# cpp-mini-nn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
examples/: xor_demo.cpp
include/: nn.cpp  nn.hpp
src/: nn.cpp
tests/: test_nn.cpp
